@@ -571,6 +571,8 @@ xref_meta(thread_at_exit(A),	[A]).
 xref_meta(predsort(A,_,_),	[A+3]).
 xref_meta(call_cleanup(A, B),	[A, B]).
 xref_meta(call_cleanup(A, _, B),[A, B]).
+xref_meta(setup_and_call_cleanup(A, B, C),[A, B, C]).
+xref_meta(setup_and_call_cleanup(A, B, _, C),[A, B, C]).
 xref_meta(on_signal(_,_,A),	[A+1]).
 xref_meta(with_mutex(_,A),	[A]).
 xref_meta(assume(G),		[G]).	% library(debug)
