@@ -58,7 +58,7 @@ ATOM("built_in_procedure"),
 ATOM("busy"),
 ATOM("byte"),
 ATOM("call"),
-ATOM("call_cleanup"),
+ATOM("setup_and_call_cleanup"),
 ATOM("callable"),
 ATOM("$callpred"),
 ATOM("canceled"),
