@@ -59,6 +59,7 @@
 #define ERR_FORMAT	       34	/* message */
 #define ERR_FORMAT_ARG	       35	/* seq, term */
 #define ERR_OCCURS_CHECK       36	/* Word, Word */
+#define ERR_CHARS_TYPE	       37	/* char *, term */
 
 #define MSG_ERRNO		((char *)(-1))
 
