@@ -23,7 +23,7 @@ FUNCTOR(ATOM_break, 3),
 FUNCTOR(ATOM_buffer, 1),
 FUNCTOR(ATOM_busy, 2),
 FUNCTOR(ATOM_call, 1),
-FUNCTOR(ATOM_call_cleanup, 3),
+FUNCTOR(ATOM_setup_and_call_cleanup, 4),
 FUNCTOR(ATOM_callpred, 2),
 FUNCTOR(ATOM_catch, 3),
 FUNCTOR(ATOM_ceil, 1),
