@@ -23,7 +23,7 @@
 #define FUNCTOR_buffer1      MK_FUNCTOR(22, 1)
 #define FUNCTOR_busy2        MK_FUNCTOR(23, 2)
 #define FUNCTOR_call1        MK_FUNCTOR(24, 1)
-#define FUNCTOR_call_cleanup3 MK_FUNCTOR(25, 3)
+#define FUNCTOR_setup_and_call_cleanup4 MK_FUNCTOR(25, 4)
 #define FUNCTOR_callpred2    MK_FUNCTOR(26, 2)
 #define FUNCTOR_catch3       MK_FUNCTOR(27, 3)
 #define FUNCTOR_ceil1        MK_FUNCTOR(28, 1)
